Fixed img not showing problem

--- a/02.social-links/style.css
+++ b/02.social-links/style.css
@@ -11,7 +11,7 @@ body{
    
 }
 .image{
-    background-image: url(/assets/images/avatar-jessica.jpeg);
+    background-image: url("https://raw.githubusercontent.com/Frgten/Frontend-Mentor-Challenges/02.social-links/main/assets/images/avatar-jessica.jpeg");
     width: 100px;
     height:100px;
     background-size: cover;
